<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditCalcActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/arrow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/credit_calc"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="145dp"
        android:layout_marginBottom="40dp"
        android:background="@color/light_green"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg">

        <LinearLayout
            android:id="@+id/layout_scrollbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            android:background="@drawable/scrollbar"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_many"
                android:textSize="21sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="20dp"/>
            <SeekBar
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="30000"
                android:max="100000"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:text="@string/max"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/date_in_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="125dp"
            android:height="35dp"
            android:inputType="number"
            android:background="@drawable/white_style"
            android:hint="@string/print_date"
            android:padding="5dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_scrollbar" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/welcome_btn"
            android:text="@string/calc"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_in_month"
            android:onClick="Calc"/>

        <TextView
            android:id="@+id/month_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_style"
            android:layout_marginTop="30dp"
            android:layout_marginStart="125dp"
            android:layout_marginEnd="125dp"
            android:height="55dp"
            android:padding="10dp"
            android:text="@string/month_payment"
            android:textColor="@color/black"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>